--- a/collage.pred.html
+++ b/collage.pred.html
@@ -56,7 +56,7 @@
 	  <section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
-			<img class="object-cover object-center rounded" alt="hero" src="media/cps (2).png">
+			<img class="object-cover object-center rounded" alt="screenshot of tool" style="border: 5px solid #718096;" src="media/cps (2).png">
 		  </div>
 		  <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
 			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">COLLEGE PREDICTOR
@@ -435,7 +435,7 @@
 	  </footer>
 	  <script>
 		function tryNow() {
-		  window.open('https://college-predictor.netlify.app', '_blank');
+		  window.open('https://jee-college-predictor.netlify.app/', '_blank');
 		}
 	  
 		function showDemo() {
