--- a/laptop.pred.html
+++ b/laptop.pred.html
@@ -56,13 +56,13 @@
 	  <section class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
 		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:mb-0 mb-10">
-			<img class="object-cover object-center rounded" alt="hero" src="media/cps (2).png">
+			<img class="object-cover object-center rounded" alt="screenshot of tool" style="border: 5px solid #718096;" src="media/cps (2).png">
 		  </div>
 		  <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">LAPTOP PREDICTOR
+			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">LAPTOP ADVISOR
 			  <!-- <br class="hidden lg:inline-block">PREDICTOR -->
 			</h1>
-			<p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius iure unde, doloribus quos blanditiis quae ipsum atque. Quia totam sed quisquam amet? Porro sit libero similique totam minima itaque minus autem eaque magnam hic tempore, eos voluptas atque odit.
+			<p class="mb-8 leading-relaxed">Welcome to our Laptop Recommendation System! Here, you can easily find the best laptop suited to your needs and budget. Whether you're looking for a device for professional use, gaming, studying, or everyday tasks, we have tailored suggestions just for you. Simply enter your budget and specify your primary purpose, and we'll provide you with the top recommendation. Our suggestions come with detailed specifications, including RAM, storage type and size, graphics, processor details, price, brand, and a direct link to purchase from Amazon. Start now to discover the perfect laptop for you!
 			</p>
 			<div class="flex justify-center">
 			  <!-- <button onclick="tryNow()" class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg kbutton" >Try Now..!!</button> -->
@@ -88,14 +88,13 @@
 				<!-- <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-12 h-12" viewBox="0 0 24 24">
 				  <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
 				</svg> -->
-				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-pdf w-12 h-12" viewBox="0 0 16 16">
-					<path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
-					<path d="M4.603 14.087a.8.8 0 0 1-.438-.42c-.195-.388-.13-.776.08-1.102.198-.307.526-.568.897-.787a7.7 7.7 0 0 1 1.482-.645 20 20 0 0 0 1.062-2.227 7.3 7.3 0 0 1-.43-1.295c-.086-.4-.119-.796-.046-1.136.075-.354.274-.672.65-.823.192-.077.4-.12.602-.077a.7.7 0 0 1 .477.365c.088.164.12.356.127.538.007.188-.012.396-.047.614-.084.51-.27 1.134-.52 1.794a11 11 0 0 0 .98 1.686 5.8 5.8 0 0 1 1.334.05c.364.066.734.195.96.465.12.144.193.32.2.518.007.192-.047.382-.138.563a1.04 1.04 0 0 1-.354.416.86.86 0 0 1-.51.138c-.331-.014-.654-.196-.933-.417a5.7 5.7 0 0 1-.911-.95 11.7 11.7 0 0 0-1.997.406 11.3 11.3 0 0 1-1.02 1.51c-.292.35-.609.656-.927.787a.8.8 0 0 1-.58.029m1.379-1.901q-.25.115-.459.238c-.328.194-.541.383-.647.547-.094.145-.096.25-.04.361q.016.032.026.044l.035-.012c.137-.056.355-.235.635-.572a8 8 0 0 0 .45-.606m1.64-1.33a13 13 0 0 1 1.01-.193 12 12 0 0 1-.51-.858 21 21 0 0 1-.5 1.05zm2.446.45q.226.245.435.41c.24.19.407.253.498.256a.1.1 0 0 0 .07-.015.3.3 0 0 0 .094-.125.44.44 0 0 0 .059-.2.1.1 0 0 0-.026-.063c-.052-.062-.2-.152-.518-.209a4 4 0 0 0-.612-.053zM8.078 7.8a7 7 0 0 0 .2-.828q.046-.282.038-.465a.6.6 0 0 0-.032-.198.5.5 0 0 0-.145.04c-.087.035-.158.106-.196.283-.04.192-.03.469.046.822q.036.167.09.346z"/>
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-currency-rupee w-12 h-12" viewBox="0 0 16 16">
+					<path d="M4 3.06h2.726c1.22 0 2.12.575 2.325 1.724H4v1.051h5.051C8.855 7.001 8 7.558 6.788 7.558H4v1.317L8.437 14h2.11L6.095 8.884h.855c2.316-.018 3.465-1.476 3.688-3.049H12V4.784h-1.345c-.08-.778-.357-1.335-.793-1.732H12V2H4z"/>
 				  </svg>
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-				<h2 class="font-medium title-font text-white mb-1 text-xl">Finding CRL</h2>
-				<p class="leading-relaxed">Check your Rank from your examination score card.</p>
+				<h2 class="font-medium title-font text-white mb-1 text-xl">Finding Budget</h2>
+				<p class="leading-relaxed">Estimate your budjet, and find for what purpose you are buying the laptop.</p>
 			  </div>
 			</div>
 		  </div>
@@ -133,7 +132,7 @@
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
 				<h2 class="font-medium title-font text-white mb-1 text-xl">Entering Details</h2>
-				<p class="leading-relaxed">Enter your CRL or Category Rank, Category, Branch, Home State, Gender, College Type.</p>
+				<p class="leading-relaxed">Enter your Bugjet, tick the purposes of your laptop. Submit the information.</p>
 			  </div>
 			</div>
 		  </div>
@@ -151,7 +150,7 @@
 			  </div>
 			  <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
 				<h2 class="font-medium title-font text-white mb-1 text-xl">Collecting Details</h2>
-				<p class="leading-relaxed">Now you can see your elligible collages based on 2023 data. Print it, take screenshot, note it, It's Completely Yours</p>
+				<p class="leading-relaxed">Now you can see perfect laptop for you. Print it, take screenshot, note it, It's Completely Yours</p>
 			  </div>
 			</div>
 		  </div>
@@ -165,7 +164,7 @@
 		<div class="container px-5 py-24 mx-auto flex flex-wrap">
 		  <h2 class="sm:text-3xl text-2xl text-white font-medium title-font mb-2 md:w-2/5">How it works?</h2>
 		  <div class="md:w-3/5 md:pl-6">
-			<p class="leading-relaxed text-base">Our College Predictor tool leverages data extracted from official government college eligibility documents and JoSAA records from the previous year (2023). By meticulously analyzing this data, we have developed a robust backend to provide accurate college recommendations. When you input your rank, category, gender, and home state, our algorithm considers India's quota system, which allocates seats based on gender, category, and physical disability. We prioritize matching you with top government colleges in or near your state, ensuring that you receive the best possible recommendations tailored to your specific criteria.</p>
+			<p class="leading-relaxed text-base">Our Laptop Recommendation System is built on a foundation of extensive research and data collection. We have gathered information on hundreds of laptops from various official brand stores and popular retail platforms, ensuring that our data is accurate and up-to-date. Each laptop's specifications, including RAM, storage type and size, graphics, and processor details, have been meticulously recorded. Additionally, we have carefully analyzed and defined which laptops are best suited for different purposes, whether it's for professional use, gaming, studying, or general tasks. By tracking prices across multiple stores, we ensure that you get the best value for your budget. Our goal is to provide you with personalized and reliable recommendations, making it easier for you to find the perfect laptop.</p>
 			<!-- <div class="flex md:mt-4 mt-6">
 			  <button class="inline-flex text-white bg-green-500 border-0 py-1 px-4 focus:outline-none hover:bg-green-600 rounded">Button</button>
 			  <a class="text-green-400 inline-flex items-center ml-4">Learn More
@@ -185,7 +184,7 @@
 		<div class="container px-5 py-24 mx-auto flex flex-wrap">
 		  <h2 class="sm:text-3xl text-2xl text-white font-medium title-font mb-2 md:w-2/5">Disclaimer</h2>
 		  <div class="md:w-3/5 md:pl-6">
-			<p class="leading-relaxed text-base">This College Predictor ULTRA website uses data sourced from official websites. Currently, we have included the following counseling processes: JOSAA, CSAB, AKTU, UPTAC, UPTU, JAC, WBJEE, and GGSIPU, all based on JEE Mains and JEE Advanced ranks. We will strive to add more counseling processes as data becomes accessible in the future.Please note that if this website is found being used for any paid services, we will take appropriate action against such misuse. This website is protected under copyright laws.</p>
+			<p class="leading-relaxed text-base">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae animi maiores itaque eligendi debitis deleniti aperiam, facere harum rerum eveniet officiis consequuntur iste quibusdam inventore cum? Voluptate earum cupiditate deleniti magni magnam natus odio mollitia blanditiis veniam sapiente ipsum error, rerum harum iste porro nostrum nihil eaque dignissimos officiis quaerat!</p>
 			<!-- <div class="flex md:mt-4 mt-6">
 			  <button class="inline-flex text-white bg-green-500 border-0 py-1 px-4 focus:outline-none hover:bg-green-600 rounded">Button</button>
 			  <a class="text-green-400 inline-flex items-center ml-4">Learn More
@@ -331,8 +330,8 @@
 			  </svg>
 			</div>
 			<div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-			  <h2 class="text-white text-lg title-font font-medium mb-2">Can I trust the results provided by the predictor?</h2>
-			  <p class="leading-relaxed text-base">While the predictor tool can give you a rough idea of the colleges you might get based on your rank, it's always wise to cross-verify the information and refer to official sources for confirmation.</p>
+			  <h2 class="text-white text-lg title-font font-medium mb-2">Can I trust the results provided by the advisor?</h2>
+			  <p class="leading-relaxed text-base">Yes, you can trust the results provided by the advisor. Our recommendations are based on comprehensive data from official brand stores and multiple retail platforms, ensuring accurate and reliable information tailored to your specific needs and budget.</p>
 			  <!-- <a class="mt-3 text-green-400 inline-flex items-center">Learn More
 				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
 				  <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -375,8 +374,8 @@
 			  </a> -->
 			</div>
 			<div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-800 sm:flex-row flex-col">
-				<h2 class="text-white text-lg title-font font-medium mb-2"><br>How accurate is the predictor tool?</h2>
-				<p class="leading-relaxed text-base">The accuracy of the predictor tool depends on the data it's built upon and the algorithm used.</p>
+				<h2 class="text-white text-lg title-font font-medium mb-2"><br>How accurate is the advisor tool?</h2>
+				<p class="leading-relaxed text-base">The accuracy of the advisor tool depends on the data it's built upon and the algorithm used.</p>
 				<!-- <a class="mt-3 text-green-400 inline-flex items-center">Learn More
 				  <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
 					<path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -433,5 +432,20 @@
 		  </span>
 		</div>
 	  </footer>
+
+	  <script>
+		function tryNow() {
+			window.open('https://laptop-advisor.netlify.app/', '_blank');
+		}
+		function showDemo() {
+			window.open('https://youtu.be/3-T_iC_yVj8?si=xXNjXXc6MriDtLTP', '_blank'); 
+		}
+		function Contact() {
+			window.location.href = 'contact.html';
+		}
+		function TeleGram() {
+			window.open('https://t.me/grand_theft_coders')
+		}
+	  </script>
 </body>
 </html>
