--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,27 @@
   <link rel="stylesheet" href="styles/darkmode.css">
   <link rel="stylesheet" href="styles/social.contact.css">
   <link rel="stylesheet" href="styles/top.css">
+  <link rel="stylesheet" href="styles/ham.css">
 </head>
 <body>
 	
 	<header class="text-gray-400 bg-gray-900 body-font">
-		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center justify-between">
 		  <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0" href="index.html">
+			<!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
+			  <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+			</svg> -->
 			<img src="media/logo.jpg" alt="GTC logo" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-20 h-20 rounded-full" viewBox="0 0 24 24">
-			<span class="ml-3 text-xl kfont">Grand Theft Coders</span>
+			<span class="ml-3 text-xl kfont">Grand Theft <span style="color: #f80500;">Coders</span></span>
 		  </a>
-		  <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
+		  <label class="hamburger md:hidden">
+			<input type="checkbox" id="menu-toggle">
+			<svg viewBox="0 0 32 32">
+			  <path class="line line-top-bottom" d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"></path>
+			  <path class="line" d="M7 16 27 16"></path>
+			</svg>
+		  </label>
+		  <nav id="nav-menu" class="hidden md:flex flex-col md:flex-row md:items-center md:space-x-4">
 			<a class="mr-5 hover:text-white k2font" href="index.html">Home</a>
 			<a class="mr-5 hover:text-white k2font" href="projects.html">Projects</a>
 			<a class="mr-5 hover:text-white k2font" href="contact.html">Contact</a>
@@ -31,7 +42,7 @@
 				  </svg>
 			</a>
 		  </nav>
-		  <div class="flex items-center">
+		  <div class="hidden md:flex items-center">
 			<label class="theme-switch">
 				<input type="checkbox" class="theme-switch__checkbox">
 				<div class="theme-switch__container">
@@ -54,9 +65,22 @@
 			</label>
 		</div>
 		</div>
-		
-	  </header>
 
+
+		<div id="mobile-menu" class="hidden md:hidden">
+			<a class="block py-2 px-4 text-white k2font" href="index.html">Home</a>
+			<a class="block py-2 px-4 text-white k2font" href="projects.html">Projects</a>
+			<a class="block py-2 px-4 text-white k2font" href="contact.html">Contact</a>
+			<a class="block py-2 px-4 text-white k2font flex items-center" target="_blank" href="https://t.me/grand_theft_coders">Telegram Group
+			  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right ml-1 mb-1" viewBox="0 0 16 16">
+				<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a.5.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+				<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+			  </svg>
+			</a>
+		  </div>
+
+		
+	  </header><script src="scripts/hum.js"></script>
 
 	  <div>
 		<section class="text-gray-400 bg-gray-900 body-font overflow-hidden">
@@ -733,7 +757,7 @@
 	  <footer class="text-gray-400 bg-gray-900 body-font">
 		<div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
 		  <a class="flex title-font font-medium items-center md:justify-start justify-center text-white" href="index.html">
-			<span class="ml-3 text-xl kfont">Grand Theft Coders</span>
+			<span class="ml-3 text-xl kfont">Grand Theft <span style="color: #f80500;">Coders</span></span>
 		  </a>
 		  <p class="text-sm text-gray-400 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-800 sm:py-2 sm:mt-0 mt-4 k2font">Made with love by
 			<a href="https://t.me/Dr_AiR" class="text-gray-500 ml-1" target="_blank" rel="noopener noreferrer" target="_blank">@AiR</a>
